--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  gap: 2rem;
+  /* min-height: 100vh; */
 }
 
 .description {
